--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2 id="hi-there">Hi there!</h2> <!-- nested these inside so that the h2 and image would align vertically -->
           </div>
           <div class="col-sm-12">
-            <img class="logo profile" src="img/whalehellothere2_logo.png" alt="Whale logo" />
+            <img class="logo profile" src="pineapplemon.github.io/img/Whale_hello_there!.png" alt="Whale logo" />
           </div>
         </div>
       </div>
